--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cenario-passo0.png" alt="">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fforbes.com.br%2Fforbesesg%2F2021%2F06%2Fdia-do-meio-ambiente-5-companhias-brasileiras-que-possuem-suas-proprias-reservas-naturais%2F&psig=AOvVaw2pAZiecY8BjjqONNspzVMr&ust=1751107721289000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMji4vO2kY4DFQAAAAAdAAAAABAE" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
             <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
             <button class="btn-proximo" data-proximo="2">Pernambuco</button>
