--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         <div class="passo ativo" id="passo-0">
             <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fforbes.com.br%2Fforbesesg%2F2021%2F06%2Fdia-do-meio-ambiente-5-companhias-brasileiras-que-possuem-suas-proprias-reservas-naturais%2F&psig=AOvVaw2pAZiecY8BjjqONNspzVMr&ust=1751107721289000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMji4vO2kY4DFQAAAAAdAAAAABAE" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <button class="btn-proximo" data-proximo="1">Havaí</button>
+            <button class="btn-proximo" data-proximo="2">Irlanda</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
+            <p>Você começa sua jornada no Havaí, subindo o Pico everest</p>
             <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
+            <p>Em Irlanda, você visita a histórica cidade de Dublin. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
             <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
+            <p>No topo do Pico everest, você encontra uma antiga inscrição apontando que a próxima pista está
                 localizada no Amazonas.</p>
             <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
