--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class="btn-proximo" data-proximo="2">Irlanda</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Havaí, subindo o Pico everest</p>
+            <p>Você começa sua jornada no Havaí, subindo o Pico Everest</p>
             <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
         </div>
@@ -28,7 +28,7 @@
             <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico everest, você encontra uma antiga inscrição apontando que a próxima pista está
+            <p>No topo do Pico Everest, você encontra uma antiga inscrição apontando que a próxima pista está
                 localizada no Amazonas.</p>
             <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
