--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
         <div class="passo" id="passo-3">
             <p>No topo do Pico Everest, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+                localizada na Tailândia.</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para a Tailândia</button>
         </div>
 
         <div class="passo" id="passo-4">
@@ -40,9 +40,9 @@
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>Nas igrejas de Irlanda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
+                pista está na Tailândia.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para a Tailândia</button>
         </div>
 
         <div class="passo" id="passo-6">
@@ -51,14 +51,14 @@
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
+            <p>Na Tailândia, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para a Tailândia!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para a Tailândia</button>
         </div>
 
         <div class="passo" id="passo-9">
